--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 #header{
     width:100%;
     height:100vh;
-    background-image:url("background.jpg");
+    background-image:url(https://Bidhanghosh.github.io/PORTFOLIO-WEBSITE/background.jpg);
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
